--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "deploy": "vite build && npx gh-pages -d dist -b gh-pages -t true"
+    "preview": "vite preview --port 5174",
+    "deploy": "cross-env GH_PAGES=1 vite build && gh-pages -d dist -t true -b gh-pages"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
