--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
+    "cross-env": "^10.1.0",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.47",
     "sass": "^1.79.4",
     "vite": "^5.4.10"
