--- a/package.json
+++ b/package.json
@@ -2,12 +2,18 @@
   "name": "looz",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --port 5174",
     "deploy": "cross-env GH_PAGES=1 vite build && gh-pages -d dist -t true -b gh-pages"
   },
+  "browserslist": [
+    ">0.5%",
+    "not dead",
+    "not op_mini all"
+  ],
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "cross-env": "^10.1.0",
@@ -15,5 +21,8 @@
     "postcss": "^8.4.47",
     "sass": "^1.79.4",
     "vite": "^5.4.10"
+  },
+  "dependencies": {
+    "firebase": "^12.4.0"
   }
 }
